doc/0.58/_sources/reference/get-report.txt
.. index:: GET /report
.. _get_report:

GET /report
===========

`v2`_ | `v1`_

.. _get_report_v2:

v2
--

**Required Scope:** ``console_ro``

Version 2 of this URL returns a performance report for a date period. The
report contains statistics for performance events like impressions, clicks,
url clicks, emails for all ads which match the filter criteria. To use it set
the ``Accept`` header to ``application/sellside.report-v2+json``.

.. note::

    Contrary to the rest of the API all dates are in **GMT+1** timezone.
    This will be fixed in a later release.

Parameters
----------

=======================     ========================    ========    =======================================================================================================================
Field                       Example                     Type        Info
=======================     ========================    ========    =======================================================================================================================
startDate                   "2014-11-24"                string      Report start date
endDate                     "2014-11-24"                string      Report end date (inclusive)
adIds                       "1,2,3"                     string      Comma-separated-list of ad id's which to filter the result set on. Optional, default empty to include data for all ads.
status                      "ACTIVE,DELETED"            string      Comma-separated-list of ad statuses which to filter the result set on. Optional, default is ACTIVE.
_include                    "totalSpent,title"          string      Comma-separated-list of fields to include. Optional, default is all fields.
_exclude                    "totalSpent,title"          string      Comma-separated-list of fields to omit. Optional, default empty.
=======================     ========================    ========    =======================================================================================================================

Fields
------

=======================     ========================    ========    =============================================================
Field                       Example                     Type        Info
=======================     ========================    ========    =============================================================
adId                        12                          long        Id of the ad to which the report row belongs to.
categoryId                  631                         int         Category id of the ad.
title                       "Brother Fax voor 99,99"    string      Title of the ad.
startDate                   "2012-08-31T16:12:53Z"      date        Creation date of the ad.
endDate                     "2012-08-31T16:12:53Z"      date        Deletion date of the ad if the ad is deleted, null otherwise.
totalBudget                 5000                        long        Total budget of the ad.
dailyLimit                  2000                        long        Daily limit of the ad.
totalSpent                  2000                        long        Total amount spent for this ad.
cpc                         12                          int         Cpc of the ad.
impressions                 40                          long        Number of impressions this ad received.
clicks                      10                          long        Number of clicks this ad received.
urlClicks                   3                           int         Number of url clicks this ad received.
emails                      2                           int         Number of email requests this ad received.
externalId                  "c3po-r2d2"                 string      External id of the ad.
=======================     ========================    ========    =============================================================

Example
-------

.. include:: ../examples/report-example-v2.rst

.. _get_report_v1:

v1
--

**Required Scope:** ``api_ro`` or ``console_ro``

Version 1 of this URL returns a performance report for a specific date.
The report contains statistics for performance events like impressions,
clicks, url clicks, emails for all ads which received at least one event that
day.  To use it set the ``Accept`` header to
``application/sellside.report-v1+json``.

.. warning::

    Version 1 is deprecated and will be removed after September 2015.

Parameters
~~~~~~~~~~

=======================     ========================    ========    =============================================================
Field                       Example                     Type        Info
=======================     ========================    ========    =============================================================
date                        "2014-01-30"                string      Report date.
_include                    "id,date,title"             string      Comma-separated-list of fields to include. Optional, default is all fields.
_exclude                    "id,date,title"             string      Comma-separated-list of fields to omit. Optional, default empty.
=======================     ========================    ========    =============================================================

Fields
~~~~~~

=======================     ========================    ========    =============================================================
Field                       Example                     Type        Info
=======================     ========================    ========    =============================================================
id                          42                          long        Id of the report row.
date                        "2012-08-31T16:12:53Z"      date        Date of the report.
adId                        12                          long        Id of the ad to which the report row belongs to.
categoryId                  631                         int         Category id of the ad.
title                       "Brother Fax voor 99,99"    string      Title of the ad.
startDate                   "2012-08-31T16:12:53Z"      date        Creation date of the ad.
endDate                     "2012-08-31T16:12:53Z"      date        Deletion date of the ad if the ad is deleted, null otherwise.
totalBudget                 5000                        long        Total budget of the ad.
dailyLimit                  2000                        long        Daily limit of the ad.
totalSpent                  2000                        long        Total amount spent for this ad.
cpc                         12                          int         Cpc of the ad.
impressions                 40                          long        Number of impressions this ad received.
clicks                      10                          long        Number of clicks this ad received.
urlClicks                   3                           int         Number of url clicks this ad received.
emails                      2                           int         Number of email requests this ad received.
externalId                  "c3po-r2d2"                 string      External id of the ad.
=======================     ========================    ========    =============================================================

Example
~~~~~~~

.. include:: ../examples/report-example-v1.rst
